--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+
+  <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>3.15.1
+        </version>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
